--- a/env.example
+++ b/env.example
@@ -1,3 +1,7 @@
-URI = mongodb+srv://DATAbASEuSERiD:PASSWORD@cluster0.omgilvs.mongodb.net/DATABASENAME?retryWrites=true&w=majority&appName=Cluster0
-TOKEN_SECRET=01684883865
-FRONTEND_URL=http://localhost:5173
+URI = mongodb+srv://USER:PASS@nebsit.5nahnsb.mongodb.net/DATABASENAME?retryWrites=true&w=majority&appName=nebsit
+TOKEN_SECRET=test
+FRONTEND_URL=http://localhost:3000
+NODEMAILER_PASS=test
+NODEMAILER_USER=test@gmail.com
+CARRIER_MAIL=test@gmail.com
+CONTACT_MAIL=test@gmail.com
