modify: update rate limit time

--- a/env.example
+++ b/env.example
@@ -3,5 +3,5 @@ TOKEN_SECRET=test
 FRONTEND_URL=http://localhost:3000
 NODEMAILER_PASS=test
 NODEMAILER_USER=test@gmail.com
-CARRIER_MAIL=test@gmail.com
+CARRIER_MAIL=rjspyk5@gmail.com
 CONTACT_MAIL=test@gmail.com
